# litadventure

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html
.cargo/: config.toml
assets/data/: demo.level.ron  examine_results.ron  hints.ron  objectives.ron  recipes.ron  rooms.ron
assets/scenes/: attic.glb  attic.gltf  cellar.glb  cellar.gltf  hallway.glb  hallway.gltf  study.glb  study.gltf  study2.gltf
assets/settings/: keybindings.ron
content/: _app.md  game_over.md  help.md  inventory.md  objectives.md  room_info.md  title.md  victory.md
docs/: adding-content.md  architecture.md  blender-workflow.md  components.md  data-formats.md  debug-mode.md  demo-walkthrough.md  design-principles.md  getting-started.md  prompt-skein-import-extension.md  screenshot-testing.md
examples/: load_gltf_test.rs  screenshot_test.rs  tab_selection_test.rs
src/: camera.rs  components.rs  debug.rs  game_data.rs  hints.rs  input_config.rs  input_intent.rs  interaction.rs  inventory.rs  item_preview.rs  lib.rs  main.rs  navigation.rs  objectives.rs  save.rs  scene.rs  states.rs
tools/: generate_study.py
